--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json" />
   <!-- Main stylesheet -->
@@ -106,11 +106,11 @@
   <div class="card-content"> <!-- ✅ required wrapper -->
     <div class="card-tabs">
       <div class="tab-header">
-        <button class="tab-btn active" data-tab="tab1">Ike ◐ </button>
-        <button class="tab-btn" data-tab="tab2">Pono ✔</button>
-        <button class="tab-btn" data-tab="tab3">Kūʻē ✘</button>
-        <button class="tab-btn" data-tab="tab4">Hoʻāno ❖</button>
-      </div>
+  <button class="tab-btn active" data-tab="tab1"><i class="fas fa-moon"></i></button>
+  <button class="tab-btn" data-tab="tab2"><i class="fas fa-star"></i></button>
+  <button class="tab-btn" data-tab="tab3"><i class="fas fa-ban"></i></button>
+  <button class="tab-btn" data-tab="tab4"><i class="fas fa-eye"></i></button>
+</div>
       <div class="tab-content">
         <div class="tab-pane active" id="tab1">Loading Intro...</div>
         <div class="tab-pane" id="tab2">Loading Details...</div>
@@ -147,15 +147,15 @@
       </div>
       <div class="pillar">
         <h2>ʻka mana‘o <br>(mind)</h2>
-        <p>Teachings, insights & personal wisdom</p>
+        <p>Inner clarity, wisdom & conscious thought</p>
       </div>
 	  <div class="pillar">
         <h2>ka ‘uhane <br>(spirit)</h2>
         <p>Spiritual alignment & sacred practice</p>
       </div>
       <div class="pillar">
-        <h2>Hana</h2><br>
-        <p>Work, Ohana & commitments</p>
+        <h2>kānaka<br>& hana </h2>
+        <p>Ohana, Friends, work & commitments</p>
       </div>
     </div>
   </div>
