--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <form id="login-form">
       <label>
         Email:<br>
-        <input type="email" id="login-email" placeholder="you@example.com" required>
+        <input type="email" id="login-email" placeholder="you@example.com" required autocomplete="username">
       </label><br><br>
       <label>
         Password:<br>
-        <input type="password" id="login-password" placeholder="Password" required>
+        <input type="password" id="login-password" placeholder="Password" required autocomplete="current-password">
       </label><br><br>
       <button type="submit">Login</button>
     </form>
