--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
   <div class="card-content"> <!-- ✅ required wrapper -->
     <div class="card-tabs">
       <div class="tab-header">
-  <button class="tab-btn active" data-tab="tab1"><i class="fas fa-moon"></i></button>
-  <button class="tab-btn" data-tab="tab2"><i class="fas fa-star"></i></button>
-  <button class="tab-btn" data-tab="tab3"><i class="fas fa-ban"></i></button>
-  <button class="tab-btn" data-tab="tab4"><i class="fas fa-eye"></i></button>
+  <button class="tab-btn active" data-tab="tab1" title="Lunar Phase"><i class="fas fa-moon"></i></button>
+  <button class="tab-btn" data-tab="tab2" title="Do`s"><i class="fas fa-star"></i></button>
+  <button class="tab-btn" data-tab="tab3" title="Dont`s"><i class="fas fa-ban"></i></button>
+  <button class="tab-btn" data-tab="tab4" title="Observance"> <i class="fas fa-eye"></i></button>
+  <button class="tab-btn" data-tab="tab5" title="Color"> <i class="fas fa-palette"></i></button>
 </div>
       <div class="tab-content">
-        <div class="tab-pane active" id="tab1">Loading Intro...</div>
-        <div class="tab-pane" id="tab2">Loading Details...</div>
-        <div class="tab-pane" id="tab3">Loading Notes...</div>
-        <div class="tab-pane" id="tab4">
-          
-        </div>
+        <div class="tab-pane active" id="tab1">Loading Info...</div>
+        <div class="tab-pane" id="tab2">Loading Do`s...</div>
+        <div class="tab-pane" id="tab3">Loading Dont`s...</div>
+        <div class="tab-pane" id="tab4"> Loading Observance</div>
+		<div class="tab-pane" id="tab5">Loading Color...</div>
       </div>
     </div>
   </div>
