--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json" />
   <!-- Main stylesheet -->
@@ -33,135 +33,128 @@
   </div>
 
   <!-- APP HEADER -->
- <header class="app-header">
-  <div class="header-content">
-    <div id="header-greeting">Aloha,</div>
-    <h1>Mālama Mana</h1>
-    <div id="header-tide-info"></div>
-  </div>
-</header>
+  <header class="app-header">
+    <div class="header-content">
+      <div id="header-greeting">Aloha,</div>
+      <h1>Mālama Mana</h1>
+      <div id="header-tide-info"></div>
+    </div>
+  </header>
 
   <!-- MAIN APP -->
   <div class="app hidden">
-    <!-- Top Row: Moon & Tide / Calendar Grid -->
-    <div class="top-row equal-height row-wrapper">
-  <!-- Left card: Moon + Calendar + Tide -->
-  <div class="card moon-tide">
-    <div class="calendar-navigation">
-  <button id="prev-day-direct" class="calendar-nav-arrow">◀</button>
-<div id="calendar-toggle" class="calendar-display">
-  <span id="calendar-label">Loading...</span>
-  <span class="calendar-arrow">▼</span>
-</div>
-<button id="next-day-direct" class="calendar-nav-arrow">▶</button>
-</div>
-
-    <div class="calendar-wrapper">
-      <div id="calendar-popup" class="calendar-grid hidden">
-        <div class="calendar-month">
-          <button id="prev-month" class="month-nav">&laquo;</button>
-          <button id="prev-day" class="day-nav">&lsaquo;</button>
-          <span id="calendar-month-label"></span>
-          <button id="next-day" class="day-nav">&rsaquo;</button>
-          <button id="next-month" class="month-nav">&raquo;</button>
+    <!-- Two-column layout wrapper -->
+    <div class="main-columns">
+      <!-- Left Column -->
+      <div class="left-column">
+        <!-- Moon & Calendar Card -->
+        <div class="card moon-tide">
+          <div class="calendar-navigation">
+            <button id="prev-day-direct" class="calendar-nav-arrow">◀</button>
+            <div id="calendar-toggle" class="calendar-display">
+              <span id="calendar-label">Loading...</span>
+              <span class="calendar-arrow">▼</span>
+            </div>
+            <button id="next-day-direct" class="calendar-nav-arrow">▶</button>
+          </div>
+          <div class="calendar-wrapper">
+            <div id="calendar-popup" class="calendar-grid hidden">
+              <div class="calendar-month">
+                <button id="prev-month" class="month-nav">&laquo;</button>
+                <button id="prev-day" class="day-nav">&lsaquo;</button>
+                <span id="calendar-month-label"></span>
+                <button id="next-day" class="day-nav">&rsaquo;</button>
+                <button id="next-month" class="month-nav">&raquo;</button>
+              </div>
+              <table>
+                <thead>
+                  <tr>
+                    <th>S</th><th>M</th><th>T</th><th>W</th><th>T</th><th>F</th><th>S</th>
+                  </tr>
+                </thead>
+                <tbody id="calendar-body">
+                  <!-- JS will fill this -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="moon-row">
+            <div class="info">
+              <div class="current-date"></div>
+              <div id="hawaiian-lunar-info"><em>Loading lunar information...</em></div>
+              <div class="moon-phase"></div>
+              <div class="astro-lines">
+                <div>
+                  <span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span>
+                </div>
+                <div>
+                  <span class="icon">☀️</span>Rise: <span id="sunrise-time">--:--</span> Set: <span id="sunset-time">--:--</span>
+                </div>
+              </div>
+            </div>
+            <div class="moon-image">
+              <div class="moon-photo">
+                <img id="moon-phase-image" src="" alt="Moon Phase" />
+              </div>
+            </div>
+          </div>
         </div>
-        <table>
-          <thead>
-            <tr><th>S</th><th>M</th><th>T</th><th>W</th><th>T</th><th>F</th><th>S</th></tr>
-          </thead>
-          <tbody id="calendar-body">
-            <!-- JS will fill this -->
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-    <div class="moon-row">
-      <div class="info">
-        <div class="current-date"></div>
-        <div id="hawaiian-lunar-info"><em>Loading lunar information...</em></div>
-        <div class="moon-phase"></div>
-        <div class="astro-lines">
-          <div><span class="icon">🌙</span>Rise: <span id="moonrise-time">--:--</span> Set: <span id="moonset-time">--:--</span></div>
-          <div><span class="icon">☀️</span>Rise: <span id="sunrise-time">--:--</span> Set: <span id="sunset-time">--:--</span></div>
+        <!-- Dynamic Tabbed Card -->
+        <div class="card" id="dynamic-card">
+          <div class="card-header" id="dynamic-title">Loading title...</div>
+          <div class="card-content">
+            <div class="card-tabs">
+              <div class="tab-header">
+                <button class="tab-btn active" data-tab="tab1" title="Lunar Phase"><i class="fas fa-moon"></i></button>
+                <button class="tab-btn" data-tab="tab2" title="Do`s"><i class="fas fa-star"></i></button>
+                <button class="tab-btn" data-tab="tab3" title="Dont`s"><i class="fas fa-ban"></i></button>
+                <button class="tab-btn" data-tab="tab4" title="Observance"><i class="fas fa-eye"></i></button>
+                <button class="tab-btn" data-tab="tab5" title="Color"><i class="fas fa-palette"></i></button>
+                <button class="tab-btn" data-tab="tab6" title="olelo"><i class="fas fa-seedling"></i></button>
+              </div>
+              <div class="tab-content">
+                <div class="tab-pane active" id="tab1">Loading Info...</div>
+                <div class="tab-pane" id="tab2">Loading Do`s...</div>
+                <div class="tab-pane" id="tab3">Loading Dont`s...</div>
+                <div class="tab-pane" id="tab4">Loading Observance</div>
+                <div class="tab-pane" id="tab5">Loading Color...</div>
+                <div class="tab-pane" id="tab6">loading Olelo...</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="moon-image">
-        <div class="moon-photo">
-          <img id="moon-phase-image" src="" alt="Moon Phase" />
+      <!-- Right Column -->
+      <div class="right-column">
+        <div class="tide"></div>
+        <div class="today-box">
+          <div id="today-snapshot" class="today-snapshot"></div>
         </div>
-      </div>
-    </div>
-	<div class="Olelo"></div>
-    
-  </div>
-
-  <!-- Right card: Dynamic content -->
- 
- 
-<div class="card sync-height" id="dynamic-card">
-  <div class="card-header" id="dynamic-title">Loading title...</div>
-  
-  <div class="card-content"> <!-- ✅ required wrapper -->
-    <div class="card-tabs">
-      <div class="tab-header">
-  <button class="tab-btn active" data-tab="tab1" title="Lunar Phase"><i class="fas fa-moon"></i></button>
-  <button class="tab-btn" data-tab="tab2" title="Do`s"><i class="fas fa-star"></i></button>
-  <button class="tab-btn" data-tab="tab3" title="Dont`s"><i class="fas fa-ban"></i></button>
-  <button class="tab-btn" data-tab="tab4" title="Observance"> <i class="fas fa-eye"></i></button>
-  <button class="tab-btn" data-tab="tab5" title="Color"> <i class="fas fa-palette"></i></button>
-</div>
-      <div class="tab-content">
-        <div class="tab-pane active" id="tab1">Loading Info...</div>
-        <div class="tab-pane" id="tab2">Loading Do`s...</div>
-        <div class="tab-pane" id="tab3">Loading Dont`s...</div>
-        <div class="tab-pane" id="tab4"> Loading Observance</div>
-		<div class="tab-pane" id="tab5">Loading Color...</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-</div>
-
- 
-	 
-	  
-	  
-
-    <!-- Today Snapshot -->
-    <div class="today-box">
-     
-      <div id="today-snapshot" class="today-snapshot"></div>
-    </div>
-
-    <!-- Core Pillars -->
-    <div class="pillars">
-	 <div class="tide"></div>
-            <div class="pillar">
-        <h2>ke kino <br>(body)</h2>
-        <p>Physical wellbeing & embodied care</p>
-      </div>
-      <div class="pillar">
-        <h2>ʻka mana‘o <br>(mind)</h2>
-        <p>Inner clarity, wisdom & conscious thought</p>
-      </div>
-	  <div class="pillar">
-        <h2>ka ‘uhane <br>(spirit)</h2>
-        <p>Spiritual alignment & sacred practice</p>
-      </div>
-      <div class="pillar">
-        <h2>kānaka<br>& hana </h2>
-        <p>Ohana, Friends, work & commitments</p>
+        <div class="pillars">
+          <div class="pillar">
+            <h2>ke kino <br>(body)</h2>
+            <p>Physical wellbeing & embodied care</p>
+          </div>
+          <div class="pillar">
+            <h2>ʻka mana‘o <br>(mind)</h2>
+            <p>Inner clarity, wisdom & conscious thought</p>
+          </div>
+          <div class="pillar">
+            <h2>ka ‘uhane <br>(spirit)</h2>
+            <p>Spiritual alignment & sacred practice</p>
+          </div>
+          <div class="pillar">
+            <h2>kānaka<br>& hana</h2>
+            <p>Ohana, Friends, work & commitments</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- SETTINGS MODAL -->
-  
+
   <!-- BOTTOM NAVIGATION -->
   <nav class="bottom-nav hidden">
     <a href="#calendar">
@@ -199,26 +192,20 @@
   </nav>
   <!-- MORE POPUP MENU -->
   <div id="more-menu-settings" class="more-menu hidden">
-    <button onclick="window.location.href='index.html'">Home</button>
+    <button onclick="window.location.href='index2.html'">Home</button>
     <button onclick="window.location.href='settings.html'">Settings</button>
   </div>
-<!-- Firebase CDN Scripts -->
-<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
 
-<!-- Firebase Init (single shared script) -->
-<script src="firebase-init.js"></script>
-
-
-
-  <!-- SunCalc for lunar phase -->
+  <!-- Firebase CDN Scripts -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+  <script src="firebase-init.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
-  <!-- Main JS -->
   <script src="app.js"></script>
   <script src="lunarData.js" defer></script>
   <div id="loading-screen">
-  <div class="spinner"></div>
-</div>
+    <div class="spinner"></div>
+  </div>
 </body>
 </html>
