--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
           <div class="card-content">
             <div class="card-tabs">
               <div class="tab-header">
-                <button class="tab-btn active" data-tab="tab1" title="Lunar Phase"><i class="fas fa-moon"></i></button>
+                <button class="tab-btn" data-tab="tabz" title="pic"><i class="fas fa-image"></i></button>
+				<button class="tab-btn active" data-tab="tab1" title="Lunar Phase"><i class="fas fa-moon"></i></button>
                 <button class="tab-btn" data-tab="tab2" title="Do`s"><i class="fas fa-star"></i></button>
                 <button class="tab-btn" data-tab="tab3" title="Dont`s"><i class="fas fa-ban"></i></button>
                 <button class="tab-btn" data-tab="tab4" title="Observance"><i class="fas fa-eye"></i></button>
