--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<div class="lunar-bg"></div>
   <!-- LOGIN PAGE -->
   <div id="login-page" class="card login-page hidden">
     <h2>Login</h2>
@@ -42,6 +43,7 @@
   </header>
 
   <!-- MAIN APP -->
+  
   <div class="app hidden">
     <!-- Two-column layout wrapper -->
     <div class="main-columns">
