--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
 <div class="lunar-bg"></div>
   <!-- LOGIN PAGE -->
   <div id="login-page" class="card login-page hidden">
@@ -136,21 +137,29 @@
         </div>
         <div class="pillars">
           <div class="pillar">
-            <h2>ke kino <br>(body)</h2>
+            <h2>ke kino</h2>
             <p>Physical wellbeing & embodied care</p>
           </div>
           <div class="pillar">
-            <h2>ʻka mana‘o <br>(mind)</h2>
+            <h2>ʻka mana‘o</h2>
             <p>Inner clarity, wisdom & conscious thought</p>
           </div>
           <div class="pillar">
-            <h2>ka ‘uhane <br>(spirit)</h2>
+            <h2>ka ‘uhane</h2>
             <p>Spiritual alignment & sacred practice</p>
           </div>
           <div class="pillar">
-            <h2>kānaka<br>& hana</h2>
-            <p>Ohana, Friends, work & commitments</p>
-          </div>
+			<h2>kānaka</h2>
+			<p>ʻOhana, friends and people</p>
+			</div>
+			<div class="pillar">
+			<h2>Hana</h2>
+			<p>Work & commitments</p>
+			</div>
+			<div class="pillar">
+			<h2>Ike</h2>
+			<p>Knowledge</p>
+			</div>
         </div>
       </div>
     </div>
