--- a/index.html
+++ b/index.html
@@ -137,28 +137,28 @@
         </div>
         <div class="pillars">
           <div class="pillar">
-            <h2>ke kino</h2>
+            <h2> ke kino <i class="fa-solid fa-person"></i></h2>
             <p>Physical wellbeing & embodied care</p>
           </div>
           <div class="pillar">
-            <h2>ʻka mana‘o</h2>
-            <p>Inner clarity, wisdom & conscious thought</p>
+            <h2>ʻka mana‘o <i class="fa-solid fa-brain"> </i></h2>
+            <p>Inner clarity & conscious thought</p>
           </div>
           <div class="pillar">
-            <h2>ka ‘uhane</h2>
+            <h2>ka ‘uhane <i class="fa-solid fa-hands-praying"></i></h2>
             <p>Spiritual alignment & sacred practice</p>
           </div>
           <div class="pillar">
 			<h2>kānaka</h2>
-			<p>ʻOhana, friends and people</p>
+			<p>ʻOhana, Friends $ Contacts</p>
 			</div>
 			<div class="pillar">
 			<h2>Hana</h2>
-			<p>Work & commitments</p>
+			<p>Work & life commitments</p>
 			</div>
 			<div class="pillar">
 			<h2>Ike</h2>
-			<p>Knowledge</p>
+			<p>Wisdom & knowledge</p>
 			</div>
         </div>
       </div>
