--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Mālama Mana</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json" />
   <!-- Main stylesheet -->
@@ -137,29 +139,30 @@
         </div>
         <div class="pillars">
           <div class="pillar">
-            <h2> ke kino <i class="fa-solid fa-person"></i></h2>
+            <h2> ke kino <i class="fa-solid fa-child-reaching"></i></h2>
             <p>Physical wellbeing & embodied care</p>
           </div>
           <div class="pillar">
-            <h2>ʻka mana‘o <i class="fa-solid fa-brain"> </i></h2>
+            <h2>ʻka mana‘o <i class="fa-solid fa-brain"></i> </i></h2>
             <p>Inner clarity & conscious thought</p>
           </div>
           <div class="pillar">
             <h2>ka ‘uhane <i class="fa-solid fa-hands-praying"></i></h2>
             <p>Spiritual alignment & sacred practice</p>
           </div>
-          <div class="pillar">
-			<h2>kānaka</h2>
-			<p>ʻOhana, Friends $ Contacts</p>
-			</div>
-			<div class="pillar">
-			<h2>Hana</h2>
+		  <div class="pillar">
+			<h2>Hana <i class="fa-solid fa-briefcase"></i></h2>
 			<p>Work & life commitments</p>
 			</div>
-			<div class="pillar">
-			<h2>Ike</h2>
+          <a href="contact-form.html" class="pillar">
+  <h2>kānaka <i class="fa-solid fa-people-group"></i></h2>
+  <p>ʻOhana, Friends & Contacts</p>
+</a>
+						<div class="pillar">
+			<h2>Ike <i class="fa-solid fa-book-open"></i></h2>
 			<p>Wisdom & knowledge</p>
 			</div>
+			
         </div>
       </div>
     </div>
