--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,8 @@
 <link href="style.css" rel="stylesheet"/>
 </head>
 <body class="settings-mode">
+<div class="lunar-bg"></div>
+<div class="moon-overlay"></div>
 <!-- APP HEADER -->
 <header class="app-header">
 <div class="header-content">
@@ -67,46 +69,71 @@
 
 <!-- BOTTOM NAVIGATION -->
 <nav class="bottom-nav">
-<a href="index.html">
-<!-- calendar icon -->
-<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24">
-<rect height="18" rx="2" ry="2" width="18" x="3" y="4"></rect>
-<line x1="16" x2="16" y1="2" y2="6"></line>
-<line x1="8" x2="8" y1="2" y2="6"></line>
-<line x1="3" x2="21" y1="10" y2="10"></line>
-</svg>
-<span>Dashboard</span>
-</a>
-<a href="#today">
-<!-- today icon -->
-<svg fill="currentColor" viewbox="0 0 24 24">
-<circle cx="12" cy="12" r="10"></circle>
-</svg>
-<span>Today</span>
-</a>
-<a href="#add">
-<!-- add icon -->
-<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24">
-<line x1="12" x2="12" y1="5" y2="19"></line>
-<line x1="5" x2="19" y1="12" y2="12"></line>
-</svg>
-<span>Add</span>
-</a>
-<a href="#" id="more-button-settings">
-<!-- more icon -->
-<svg fill="currentColor" viewbox="0 0 24 24">
-<circle cx="5" cy="12" r="2"></circle>
-<circle cx="12" cy="12" r="2"></circle>
-<circle cx="19" cy="12" r="2"></circle>
-</svg>
-<span>More</span>
-</a>
+ <div class="nav-inner">
+ <!-- Dashboard -->
+  <a href="index.html">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+         stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+      <line x1="16" y1="2" x2="16" y2="6"></line>
+      <line x1="8" y1="2" x2="8" y2="6"></line>
+      <line x1="3" y1="10" x2="21" y2="10"></line>
+    </svg>
+    <span>Dashboard</span>
+  </a>
+
+  <!-- Today -->
+  <a href="#today">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+         stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10"></circle>
+      <line x1="12" y1="6" x2="12" y2="12"></line>
+      <line x1="12" y1="12" x2="16" y2="14"></line>
+    </svg>
+    <span>Today</span>
+  </a>
+
+  <!-- Week -->
+  <a href="#week">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+         stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="4" width="18" height="16" rx="2" ry="2"></rect>
+      <line x1="3" y1="10" x2="21" y2="10"></line>
+      <line x1="7" y1="14" x2="7" y2="14"></line>
+      <line x1="12" y1="14" x2="12" y2="14"></line>
+      <line x1="17" y1="14" x2="17" y2="14"></line>
+    </svg>
+    <span>Week</span>
+  </a>
+
+  <!-- Month -->
+  <a href="#month">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+         stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+      <line x1="3" y1="10" x2="21" y2="10"></line>
+      <line x1="7" y1="14" x2="7" y2="14"></line>
+      <line x1="12" y1="14" x2="12" y2="14"></line>
+      <line x1="17" y1="14" x2="17" y2="14"></line>
+      <line x1="7" y1="18" x2="7" y2="18"></line>
+      <line x1="12" y1="18" x2="12" y2="18"></line>
+      <line x1="17" y1="18" x2="17" y2="18"></line>
+    </svg>
+    <span>Month</span>
+  </a>
+
+   <!-- Settings -->
+  <a href="settings.html">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+         stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="3"></circle>
+      <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09a1.65 1.65 0 0 0 1.51-1 1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33h.09a1.65 1.65 0 0 0 1-1.51V3a2 2 0 1 1 4 0v.09a1.65 1.65 0 0 0 1 1.51h.09a1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82v.09a1.65 1.65 0 0 0 1.51 1H21a2 2 0 1 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"/>
+    </svg>
+    <span>Settings</span>
+  </a> </div>
 </nav>
 <!-- MORE POPUP MENU -->
-<div class="more-menu hidden" id="more-menu-settings">
-<button onclick="window.location.href='index.html'">Home</button>
-<button onclick="window.location.href='settings.html'">Settings</button>
-</div>
+
 <!-- Firebase CDN Scripts -->
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
